# backend-api/docs/swagger.yaml
@@ -156,7 +156,7 @@ paths:
                     examples:
                         application/json: |-
                             {
-                                "RecipeID": "43ad65a0-d4f7-11h0-b43r-901b0eec5891",
+                                "ChalleneID": "43ad65a0-d4f7-11h0-b43r-901b0eec5891",
                                 "Title": "TestTitle",
                                 "Descrpition": "TestDescription",
                                 "Is_Active" : "Yes"
@@ -196,7 +196,30 @@ paths:
             parameters:
                 -
                     name: body
+                    schema:
+                        $ref: '#/definitions/New-User'
                     in: body
+                    required: true
+            responses:
+                '201':
+                    description: Send 201 when User is successfully added to the DB
+                    schema:
+                        $ref: '#/definitions/New-User'
+                    examples:
+                        application/json:
+                            -
+                                EmailAddress: a@b.com
+                                Password: abc123
+                                UserName: tester
+                                PhoneNumber2FA: '1234567'
+                '400':
+                    description: 'Send 400, when the request body is missing some parameter.'
+                    schema:
+                        $ref: '#/definitions/Error'
+                    examples:
+                        application/json:
+                            -
+                                error: Missin some parameter.
             summary: Add a new User to the app
             description: Enables user signup functions and further usage.
     /challenges:
@@ -211,6 +234,28 @@ paths:
                         items:
                             type: string
             summary: Get all the challenges in API
+        post:
+            tags:
+                - challenges
+            parameters:
+                -
+                    name: body
+                    description: The challenge to be created
+                    schema:
+                        $ref: '#/definitions/New-Challenge'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: Send 201 when challenge is successfully added to the database
+                    schema:
+                        $ref: '#/definitions/New-Challenge'
+                '400':
+                    description: Missing some parameter. Title and content are required.
+                    schema:
+                        $ref: '#/definitions/Error'
+            summary: Create a new challenge into the app
+            description: Creates a new challenge with its required details for further usage.
 definitions:
     Error:
         title: Root Type for Error
@@ -252,7 +297,34 @@ definitions:
         description: 'New user data, PhoneNumber2FA is optional'
         type: object
         example:
-            EmailAddress: a@b.com
-            Password: abc123
-            UserName: tester
-            PhoneNumber2FA: '1234567'
+            -
+                EmailAddress: a@b.com
+                Password: abc123
+                UserName: tester
+                PhoneNumber2FA: '1234567'
+    New-Challenge:
+        title: Root Type for New-Challenge
+        description: ''
+        type: object
+        properties:
+            ChallengeID:
+                type: string
+            Title:
+                type: string
+            Descrpition:
+                type: string
+            Is_Active:
+                type: string
+            createdAt:
+                format: date-time
+                type: string
+            updatedAt:
+                format: date-time
+                type: string
+        example:
+            ChallengeID: 43ad65a0-d4f7-11h0-b43r-901b0eec5891
+            Title: Title
+            Description: Description
+            Is_Active: 'True'
+            createdAt: '2025-12-01T16:37:08.000Z'
+            updatedAt: '2025-12-01T16:37:08.000Z'
